--- a/index.html
+++ b/index.html
@@ -8,6 +8,34 @@
     <title>úkol do wpa</title>
 </head>
 <body>
+<form>
+    <label for="prukazka1">Text</label>
+    <input type="text" name="text" id="prukazka1">
+</form>
+<form>
+    <label for="Emailovaprukazka">E-mail</label>
+    <input type="email" name="E-mail" id="emailovaprukazka">
+</form>
+<form>
+    <select name="oblibenyden">
+       <optgroup label="Všední dny">
+           <option>Pondělí</option>
+           <option>Úterý</option>
+           <option>Středa</option>
+           <option>Čtvrtek</option>
+           <option>Pátek</option>
+       </optgroup>
+        <optgroup label="Víkend">
+            <option>Sobota</option>
+            <option>Neděle</option>
 
+        </optgroup>
+
+    </select>
+    <form>
+        <label for="Heslovaprukazka">Heslo</label>
+        <input type="password" name="Heslo"
+    </form>
+</form>
 </body>
 </html>
