Preperinos ondziros zase

--- a/index.html
+++ b/index.html
@@ -9,22 +9,29 @@
 </head>
 <body>
 <form>
-    <label for="prukazka1">Text</label>
+    <label for="prukazka1">Přezdívka</label>
     <input type="text" name="text" id="prukazka1">
 </form>
 <form>
     <label for="Emailovaprukazka">E-mail</label>
     <input type="email" name="E-mail" id="emailovaprukazka">
 </form>
+
+    <form>
+        <label for="Heslovaprukazka">Heslo</label>
+        <input type="password" name="Heslo" id="Heslovaprukazka">
+    </form>
+</form>
+</body>
 <form>
     <select name="oblibenyden">
-       <optgroup label="Všední dny">
-           <option>Pondělí</option>
-           <option>Úterý</option>
-           <option>Středa</option>
-           <option>Čtvrtek</option>
-           <option>Pátek</option>
-       </optgroup>
+        <optgroup label="Všední dny">
+            <option>Pondělí</option>
+            <option>Úterý</option>
+            <option>Středa</option>
+            <option>Čtvrtek</option>
+            <option>Pátek</option>
+        </optgroup>
         <optgroup label="Víkend">
             <option>Sobota</option>
             <option>Neděle</option>
@@ -32,10 +39,4 @@
         </optgroup>
 
     </select>
-    <form>
-        <label for="Heslovaprukazka">Heslo</label>
-        <input type="password" name="Heslo"
-    </form>
-</form>
-</body>
 </html>
