--- a/index.html
+++ b/index.html
@@ -8,22 +8,34 @@
     <title>úkol do wpa</title>
 </head>
 <body>
-<form>
-    <label for="prukazka1">Přezdívka</label>
+<H2 style ="display: flex; justify-content: center; flex-direction: column;
+align-items: center;" >GET STARTED</H2>
+<h5 style ="display: flex; justify-content: center; flex-direction: column;
+align-items: center;" >Create your account now</h5>
+
+<form style ="display: flex; justify-content: center; flex-direction: column;
+align-items: center;" >
+    <label for="prukazka1">Full Name</label>
     <input type="text" name="text" id="prukazka1">
 </form>
-<form>
+<form style ="display: flex; justify-content: center; flex-direction: column;
+align-items: center;" >
     <label for="Emailovaprukazka">E-mail</label>
     <input type="email" name="E-mail" id="emailovaprukazka">
 </form>
 
-    <form>
-        <label for="Heslovaprukazka">Heslo</label>
+    <form style ="display: flex; justify-content: center; flex-direction: column;
+align-items: center; align-self: left" >
+        <label style ="display: flex; justify-content: center; flex-direction: column;
+align-self: center;"  for="Heslovaprukazka">Password</label>
         <input type="password" name="Heslo" id="Heslovaprukazka">
     </form>
 </form>
 </body>
-<form>
+
+
+<form style ="display: flex; justify-content: center; flex-direction: column;
+align-items: center;" >
     <select name="oblibenyden">
         <optgroup label="Všední dny">
             <option>Pondělí</option>
@@ -40,3 +52,4 @@
 
     </select>
 </html>
+<p4>
